[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Settings/Keymap/KeyMapListenerDialog.gd" type="Script" id=1]

[sub_resource type="InputEventAction" id=3]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 3 )

[node name="KeyMapListenerDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.5
margin_top = -59.0
margin_right = 178.5
margin_bottom = 59.0
popup_exclusive = true
window_title = "Please Confirm..."
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Tick" type="Timer" parent="."]
wait_time = 0.1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 347.0
margin_bottom = 108.0
custom_constants/separation = 12
alignment = 1

[node name="Message" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 337.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ui_bind_a_new_key"
align = 1
autowrap = true

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 29.0
margin_right = 337.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 10 )
max_value = 10.0
step = 1.0
rounded = true
percent_visible = false

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelBindingMessage" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 337.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ui_controls_cancel_binding"
align = 1
autowrap = true

[node name="UnbindMessage" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 337.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ui_controls_hold_to_unbind"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 78.0
margin_right = 337.0
margin_bottom = 98.0
alignment = 1

[node name="LeftContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 166.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 1

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftContainer"]
margin_left = 47.0
margin_right = 118.0
margin_bottom = 20.0
shortcut = SubResource( 2 )
text = "ui_cancel"

[node name="RightContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 337.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 1

[node name="Rebind" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightContainer"]
margin_left = 19.0
margin_right = 148.0
margin_bottom = 20.0
text = "ui_controls_rebind"
